# Watchtower

./: .coverage  .coveragerc  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pull_request_template.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  labeler.yml
.github/workflows/: build.yml  cli-check.yml  label.yml  lint.yml  pip-compile.yml  python.yml  tests.yml
connect/: app.connect  synth_replay.py
core/: create_asset.py  create_run.py  import_udl_to_nominal 2.py  import_udl_to_nominal.py  query_data.py  retrieve_asset.py  sample_query_data.py  satellite_25544_data.csv  upload_data.py
data/: satellite_12345_data.csv  satellite_25544_data.csv  satellite_46826_data.csv
docs/: instructions.md
requirements/: dev.in  dev.txt  requirements.in  requirements.txt
src/watchtower/connect/: cli.py  stream_udl.py
tests/: test_fetch_satellite_name.py  test_parse_statevector.py
tests/integration/: test_main_entrypoint.py  test_main_flow.py  test_secure_messaging_flow.py
tests/unit/: test_build_udl_url.py  test_fetch_udl_data.py  test_get_valid_date.py  test_load_env_variables.py  test_main_cli.py  test_secure_messaging_api.py  test_select_udl_api.py  test_stream_secure_messaging.py  test_upload_to_nominal.py
